@@ -16,10 +16,14 @@
 
 package com.jayway.restassured.config;
 
+import com.jayway.restassured.http.ContentType;
 import org.apache.commons.lang3.Validate;
 import org.apache.http.protocol.HTTP;
 
 import java.nio.charset.Charset;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 
 import static com.jayway.restassured.internal.assertion.AssertParameter.notNull;
 
@@ -32,6 +36,7 @@ public class EncoderConfig implements Config {
     private final String defaultContentCharset;
     private final String defaultQueryParameterCharset;
     private final boolean shouldAppendDefaultContentCharsetToContentTypeIfUndefined;
+    private final Map<String, ContentType> contentEncoders;
     private final boolean isUserDefined;
 
     /**
@@ -45,21 +50,22 @@ public class EncoderConfig implements Config {
      * </p>
      */
     public EncoderConfig() {
-        this(HTTP.DEF_CONTENT_CHARSET.toString(), UTF_8, true, true);
+        this(HTTP.DEF_CONTENT_CHARSET.toString(), UTF_8, true, new HashMap<String, ContentType>(), true);
     }
 
     public EncoderConfig(String defaultContentCharset, String defaultQueryParameterCharset) {
-        this(defaultContentCharset, defaultQueryParameterCharset, true, true);
+        this(defaultContentCharset, defaultQueryParameterCharset, true, new HashMap<String, ContentType>(), true);
     }
 
     private EncoderConfig(String defaultContentCharset, String defaultQueryParameterCharset,
                           boolean shouldAppendDefaultContentCharsetToContentTypeIfUndefined,
-                          boolean isUserDefined) {
+                          Map<String, ContentType> encoders, boolean isUserDefined) {
         Validate.notBlank(defaultContentCharset, "Default encoder content charset to cannot be blank. See \"appendDefaultContentCharsetToContentTypeIfMissing\" method if you like to disable automatically appending the charset to the content-type.");
         Validate.notBlank(defaultQueryParameterCharset, "Default protocol charset to cannot be blank.");
         this.defaultContentCharset = defaultContentCharset;
         this.defaultQueryParameterCharset = defaultQueryParameterCharset;
         this.shouldAppendDefaultContentCharsetToContentTypeIfUndefined = shouldAppendDefaultContentCharsetToContentTypeIfUndefined;
+        this.contentEncoders = encoders;
         this.isUserDefined = isUserDefined;
     }
 
@@ -72,22 +78,22 @@ public class EncoderConfig implements Config {
     }
 
     public EncoderConfig defaultContentCharset(String charset) {
-        return new EncoderConfig(charset, defaultQueryParameterCharset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, true);
+        return new EncoderConfig(charset, defaultQueryParameterCharset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, contentEncoders, true);
     }
 
     public EncoderConfig defaultContentCharset(Charset charset) {
         String charsetAsString = notNull(charset, Charset.class).toString();
-        return new EncoderConfig(charsetAsString, defaultQueryParameterCharset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, true);
+        return new EncoderConfig(charsetAsString, defaultQueryParameterCharset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, contentEncoders, true);
     }
 
     public EncoderConfig defaultQueryParameterCharset(String charset) {
-        return new EncoderConfig(defaultContentCharset, charset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, true);
+        return new EncoderConfig(defaultContentCharset, charset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, contentEncoders, true);
     }
 
     @SuppressWarnings("UnusedDeclaration")
     public EncoderConfig defaultQueryParameterCharset(Charset charset) {
         String charsetAsString = notNull(charset, Charset.class).toString();
-        return new EncoderConfig(defaultContentCharset, charsetAsString, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, true);
+        return new EncoderConfig(defaultContentCharset, charsetAsString, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, contentEncoders, true);
     }
 
     /**
@@ -103,7 +109,7 @@ public class EncoderConfig implements Config {
      * @return A new {@link com.jayway.restassured.config.EncoderConfig} instance
      */
     public EncoderConfig appendDefaultContentCharsetToContentTypeIfUndefined(boolean shouldAddDefaultContentCharsetToContentTypeIfMissing) {
-        return new EncoderConfig(defaultContentCharset, defaultQueryParameterCharset, shouldAddDefaultContentCharsetToContentTypeIfMissing, true);
+        return new EncoderConfig(defaultContentCharset, defaultQueryParameterCharset, shouldAddDefaultContentCharsetToContentTypeIfMissing, contentEncoders, true);
     }
 
     /**
@@ -115,7 +121,7 @@ public class EncoderConfig implements Config {
      */
     @Deprecated
     public EncoderConfig appendDefaultContentCharsetToStreamingContentTypeIfUndefined(boolean shouldAddDefaultContentCharsetToContentTypeIfMissing) {
-        return new EncoderConfig(defaultContentCharset, defaultQueryParameterCharset, shouldAddDefaultContentCharsetToContentTypeIfMissing, true);
+        return new EncoderConfig(defaultContentCharset, defaultQueryParameterCharset, shouldAddDefaultContentCharsetToContentTypeIfMissing, contentEncoders, true);
     }
 
     /**
@@ -148,5 +154,37 @@ public class EncoderConfig implements Config {
 
     public boolean isUserConfigured() {
         return isUserDefined;
+    }
+
+    /**
+     * @see #encodeContentTypeAs(String, ContentType)
+     */
+    public boolean hasContentEncoders() {
+        return !contentEncoders.isEmpty();
+    }
+
+    /**
+     * @return A map of all specified content encoders
+     * @see #encodeContentTypeAs(String, ContentType)
+     */
+    public Map<String, ContentType> contentEncoders() {
+        return Collections.unmodifiableMap(contentEncoders);
+    }
+
+    /**
+     * Encodes the content (body) of the request specified with the given <code>contentType</code> with the same
+     * encoder used by the supplied <code>encoder</code>. This is useful only if REST Assured picks the wrong
+     * encoder (or can't recognize it) for the given content-type.
+     *
+     * @param contentType The content-type to encode with a specific encoder.
+     * @param encoder     The encoder to use for the given content-type.
+     * @return A new {@link com.jayway.restassured.config.EncoderConfig} instance
+     */
+    public EncoderConfig encodeContentTypeAs(String contentType, ContentType encoder) {
+        notNull(contentType, "Content-Type to encode");
+        notNull(encoder, ContentType.class);
+        Map<String, ContentType> newMap = new HashMap<String, ContentType>(contentEncoders);
+        newMap.put(contentType, encoder);
+        return new EncoderConfig(defaultContentCharset, defaultQueryParameterCharset, shouldAppendDefaultContentCharsetToContentTypeIfUndefined, newMap, true);
     }
 }
